# BlogSmith

./: .env.example  .gitignore  README.md  pyproject.toml  report.md  requirements.txt  run.sh
output/: childrens-cornerstones-strong-nation-2025_blog.md  childrens-cornerstones-strong-nation-2025_metadata.json  enhancing-cognitive-function_blog.md  enhancing-cognitive-function_metadata.json  how-to-get-started-in-the-stock-market_blog.md  how-to-get-started-in-the-stock-market_metadata.json  python-vs-javascript-2025_blog.md  python-vs-javascript-2025_metadata.json  tariffs-2025_blog.md  tariffs-2025_metadata.json  thread-local-storage_blog.md  thread-local-storage_metadata.json
src/blogsmith/: cli.py  crew.py  env.py  main.py
src/blogsmith/config/: agents.yaml  tasks.yaml
src/blogsmith/tools/: custom_tool.py
tests/: test.py
