[project]
name = "blogsmith"
version = "0.1.0"
description = "BlogSmith using crewAI"
authors = [{ name = "Trivedi Varun", email = "new@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
blogsmith = "blogsmith.main:run"
run_crew = "blogsmith.main:run"
train = "blogsmith.main:train"
replay = "blogsmith.main:replay"
test = "blogsmith.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
